Archived September 2019 menu & updated images

--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -14,202 +14,6 @@
             <!-- Wrapper for slides -->
             <ul class="slides">
               <li>
-                <h3 class="subheading">September 2019</h3>
-                <ul class="menu-list">
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-09/web_Chicken Teriyaki.JPG"
-                      alt="Chicken Teriyaki"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Chicken Teriyaki</h4>
-                      <p>
-                        Chicken cooked in a homemade teriyaki sauce. Comes with
-                        stir fry veggies and rice. (Stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-09/web_Squash and Quinoa Soup.JPG"
-                      alt="Squash and Quinoa Soup"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Squash and Quinoa Soup</h4>
-                      <p>
-                        Chicken, butternut squash, and quinoa cook into the
-                        perfect soup autumn soup. Can be made vegan. (Slow
-                        cooker)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-09/web_Cilantro Lime Chicken.JPG"
-                      alt="Cilantro Lime Chicken"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Cilantro Lime Chicken</h4>
-                      <p>
-                        Pan fried chicken finished with a creamy cilantro lime
-                        sauce. Comes with veggies. (Stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-09/web_Green Chile and Cheese Stuffed Pork Chops.JPG"
-                      alt="Green Chile and Cheese Stuffed Pork Chops"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Green Chile and Cheese Stuffed Pork Chops</h4>
-                      <p>
-                        Thick, juicy pork chops stuffed with green chiles and
-                        cheddar. Comes with veggies. (Oven)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-09/web_Barbacoa Beef.JPG"
-                      alt="Barbacoa Beef"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Barbacoa Beef</h4>
-                      <p>
-                        Flavorful beef perfect for tacos, nachos or quesadillas!
-                        Comes with tortillas and cheese. (Slow cooker)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-09/web_Beef Tips and Roasted Veggies.JPG"
-                      alt="Beef Tips and Roasted Veggies"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Beef Tips and Roasted Veggies</h4>
-                      <p>
-                        Juicy, herby pieces of beef served with roasted veggies.
-                        A fall favorite! (Oven)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-09/web_Mexican Beef and Zucchini.JPG"
-                      alt="Mexican Beef and Zucchini"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Mexican Beef and Zucchini</h4>
-                      <p>Flavorful beef and veggie skillet meal. (Stovetop)</p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-09/web_Calabacita Tacos.JPG"
-                      alt="Calabacita Tacos"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Calabacita Tacos</h4>
-                      <p>
-                        Zucchini, corn, and green chiles meld together into a
-                        delicious taco filling. Comes with corn tortillas.
-                        (Stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-09/web_Roasted Veggies with Orzo.JPG"
-                      alt="Roasted Veggies with Orzo"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Roasted Veggies with Orzo</h4>
-                      <p>
-                        A great early fall pasta salad. Eggplant, zucchini,
-                        tomatoes and more are roasted then mixed with orzo and a
-                        light vinaigrette. (Oven and stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <!-- <img
-                        src="/Menu-Images/2019-09/web_Roasted Pork Chops.JPG"
-                        alt="Roasted Pork Chops"
-                        class="menu-image"
-                      /> -->
-                    <div>
-                      <h4>Roasted Pork Chops</h4>
-                      <p>
-                        Pork chops and veggies marinated in a savory Italian
-                        marinade. (Oven)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <!-- <img
-                        src="/Menu-Images/2019-09/web_Red Beans and Rice with Sausage.JPG"
-                        alt="Red Beans and Rice with Sausage"
-                        class="menu-image"
-                      /> -->
-                    <div>
-                      <h4>Red Beans and Rice with Sausage</h4>
-                      <p>A great one pot meal for a busy night. (Stovetop)</p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <!-- <img
-                      src="/Menu-Images/2019-09/web_Squash, Carrot and Kale Curry.JPG"
-                      alt="Squash, Carrot and Kale Curry"
-                      class="menu-image"
-                    /> -->
-                    <div>
-                      <h4>Squash, Carrot and Kale Curry</h4>
-                      <p>
-                        Delicious curry filled with the flavors of fall. Comes
-                        with rice (Stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <!-- <img
-                      src="/Menu-Images/2019-09/web_Teriyaki Roasted Veggies.JPG"
-                      alt="Teriyaki Roasted Veggies"
-                      class="menu-image"
-                    /> -->
-                    <div>
-                      <h4>Teriyaki Roasted Veggies</h4>
-                      <p>
-                        Roasted veggies tossed with homemade teriyaki sauce.
-                        Served over rice. (Oven and Stovetop)
-                      </p>
-                    </div>
-                  </li>
-                </ul>
-              </li>
-              <li>
                 <h3 class="subheading">October 2019</h3>
                 <ul class="menu-list">
                   <li>
@@ -389,11 +193,11 @@
                   </li>
 
                   <li>
-                    <!-- <img
-                        src="/Menu-Images/2019-10/web_.JPG"
+                    <img
+                        src="/Menu-Images/2019-10/web_Lemon Garlic Roasted Chicken.JPG"
                         alt="Lemon Garlic Roasted Chicken"
                         class="menu-image"
-                      /> -->
+                      /> 
                     <div>
                       <h4>
                         Lemon Garlic Roasted Chicken
@@ -403,11 +207,11 @@
                   </li>
 
                   <li>
-                    <!-- <img
+                    <img
                         src="/Menu-Images/2019-10/web_Korean Beef.JPG"
                         alt="Korean Beef"
                         class="menu-image"
-                      /> -->
+                      />
                     <div>
                       <h4>
                         Korean Beef
