--- a/themes/dinnerdelights/layout/_partial/services.ejs
+++ b/themes/dinnerdelights/layout/_partial/services.ejs
@@ -18,7 +18,7 @@
                             </div>
                         </div>
                         <h4>Freezer Meal Parties</h4>
-                        <p class="text">Gather your girlfriends! Dinner Delights freezer meal parties are a fun way to assemble meals ahead of time so you can pull them out and have fresh, delicious dinners on the table in no time. Dinner Delights takes care of the menu planning, shopping and prepping. You and your girlfriends get together for an evening of assembling and socialization. At the end of the party, everyone takes home six meals. Ask me how the hostess can earn free meals!</p>
+                        <p class="text">Gather your girlfriends! Dinner Delights freezer meal parties are a fun way to assemble meals ahead of time so you can pull them out and have fresh, delicious dinners on the table in no time. Dinner Delights takes care of the menu planning, shopping and prepping. You and your girlfriends get together for an evening of assembling and socialization. At the end of the party, everyone takes home six meals.</p>
                         <div class="price-container">
                             <div class="price">
                                 <div class="price-value">$100</div>
