--- a/themes/dinnerdelights/layout/_partial/footer.ejs
+++ b/themes/dinnerdelights/layout/_partial/footer.ejs
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="footer-left">
-                        &copy; 2018 Dinner Delights
+                        &copy; 2018-2019 Dinner Delights
                     </div>
                 </div>
                 <div class="col-md-8">
